--- a/index.html
+++ b/index.html
@@ -8,17 +8,27 @@
 </head>
 <body>
     <main>
-        <div class="card">
-            <div class="name-pronoun-container">
-                <div class="name-box">
-                    <span class="name">Eris Jetullaji</span>
+        <div class="site-header">
+            <span class="title">
+                Hi, I'm Mario.
+            </span>
+            <span class="subtitle">
+                Click a card!
+            </span>
+        </div>
+        <div class="cards-container">
+            <div class="aboutme-card">
+                <div class="name-pronoun-container">
+                    <div class="name-box">
+                        <span class="name"> Mario Jetullaji</span>
+                    </div>
+                    <div class="pronoun-box">
+                        <span class="pronouns">They/Them</span>
+                    </div>
                 </div>
-                <div class="pronoun-box">
-                    <span class="pronouns">They/Them</span>
+                <div class="card-ascii-art">
+                    <pre class="doomguy"></pre>
                 </div>
-            </div>
-            <div class="card-ascii-art">
-                <pre class="doomguy"></pre>
             </div>
         </div>
     </main>
