--- a/index.html
+++ b/index.html
@@ -9,26 +9,37 @@
 <body>
     <main>
         <div class="site-header">
-            <span class="title">
+            <h1 class="title">
                 Hi, I'm Mario.
-            </span>
-            <span class="subtitle">
+            </h1>
+            <h2 class="subtitle">
                 Click a card!
-            </span>
+            </h2>
         </div>
         <div class="cards-container">
             <div class="aboutme-card">
-                <div class="name-pronoun-container">
-                    <div class="name-box">
-                        <span class="name"> Mario Jetullaji</span>
-                    </div>
-                    <div class="pronoun-box">
-                        <span class="pronouns">They/Them</span>
-                    </div>
+                <div class="aboutme-title-box">
+                    <span class="card-title">About Me</span>
                 </div>
-                <div class="card-ascii-art">
+                <div class="aboutme-card-ascii-art">
                     <pre class="doomguy"></pre>
                 </div>
+                <div class="about-me">
+                    <p>
+                        "Real Emo" only consists of the dc Emotional Hardcore scene and the late 90's Screamo scene. What is known by "Midwest Emo" is nothing but Alternative Rock with questionable real emo influence. When people try to argue that bands like My Chemical Romance are not real emo, while saying that Sunny Day Real Estate is, I can't help not to cringe because they are just as fake emo as My Chemical Romance (plus the pretentiousness).
+                        Real emo sounds ENERGETIC, POWERFUL and somewhat HATEFUL. Fake emo is weak, self pity and a failed attempt to direct energy and emotion into music.
+                        Some examples of REAL EMO are Pg 99, Rites of Spring, Cap n Jazz (the only real emo band from the midwest scene) and Loma Prieta.
+                        Some examples of FAKE EMO are American Football, My Chemical Romance and Mineral
+                        EMO BELONGS TO HARDCORE
+                        NOT TO INDIE, POP PUNK, ALT ROCK OR ANY OTHER MAINSTREAM GENRE
+                    </p>
+                </div>
+            </div>
+            <div class="skills-card">
+                <div class="skills-title-box">
+                    <span class="card-title">Skills</span>
+                </div>
+                <div class="skills-card-ascii-art"></div>
             </div>
         </div>
     </main>
