fixed doomguy , added blur

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <span class="card-title">About Me</span>
                 </div>
                 <div class="aboutme-card-ascii-art">
-                    <pre class="doomguy"></pre>
+                    <p class="doomguy"></p>
                 </div>
                 <div class="about-me">
                     <p>
