--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
     </header>
     <main>
         <div class="container">
-            
+            <div class="about-me"></div>
+            <div class="tech-stack"></div>
+            <div class="skills"></div>
+            <div class="projects"></div>
         </div>
     </main>
-    <footer></footer>
+    <footer class="footer"></footer>
     <script src="script.js"></script>
 </body>
 </html>
