--- a/index.html
+++ b/index.html
@@ -7,20 +7,67 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="top-bar">
+        <div class="links">
+            <a href="https://github.com/aem2231">[GitHub]</a>
+        </div>
+    </div>
     <header class="site-header">
         <h1 class="title">
             Hi, I'm Mario.
         </h1>
         <h2 class="subtitle">
-            (scroll down)                
+            [scroll down]                
         </h2>
     </header>
     <main>
         <div class="container">
-            <div class="about-me"></div>
-            <div class="tech-stack"></div>
-            <div class="skills"></div>
-            <div class="projects"></div>
+            <div class="subcontainer">
+                <div class="about-me-container">            
+                    <span class="title-about-me">About Me</span>
+                    <div class="about-me"></div></div>
+                <div class="tech-stack-skills-container">
+                    <span class="title-tech-stack">Tech Stack</span>
+                    <div class="tech-stack">
+                        <div class="tech-stack">
+                            <div class="tech-stack">
+                                <div class="tech-stack-item">
+                                    <img src="./assets/python.png">
+                                    <span class="tech-name">Python</span>
+                                </div>
+                                <div class="tech-stack-item">
+                                    <img src="./assets/c.png">
+                                    <span class="tech-name">C</span>
+                                </div>
+                                <div class="tech-stack-item">
+                                    <img src="./assets/git.png">
+                                    <span class="tech-name">Git</span>
+                                </div>
+                                <div class="tech-stack-item">
+                                    <img src="./assets/bash.png">
+                                    <span class="tech-name">Bash</span>
+                                </div>
+                                <div class="tech-stack-item">
+                                    <img src="./assets/linux.png">
+                                    <span class="tech-name">Linux</span>
+                                </div>
+                                <div class="tech-stack-item">
+                                    <img src="./assets/nix.png">
+                                    <span class="tech-name">Nix</span>
+                                </div>
+                            </div>
+                            
+                        </div>
+                        
+                    </div>
+                    <span class="title-skills">Skills</span>
+                    <div class="skills"></div>
+                </div>
+            </div>
+            <div class="projects-container">
+                <span class="title-projects">Projects</span>
+                <div class="projects"></div>
+            </div>
         </div>
     </main>
     <footer class="footer"></footer>
