Revert "chnaged bash logo"
This reverts commit 205258246560e8545f50e263604f5dbb4a2dd7a9.

--- a/index.html
+++ b/index.html
@@ -12,61 +12,64 @@
             <a href="https://github.com/aem2231">[GitHub]</a>
         </div>
     </div>
-
     <header class="site-header">
-        <h1 class="title">Hi, I'm Mario.</h1>
-        <h2 class="subtitle">[scroll down]</h2>
+        <h1 class="title">
+            Hi, I'm Mario.
+        </h1>
+        <h2 class="subtitle">
+            [scroll down]                
+        </h2>
     </header>
-
     <main>
         <div class="container">
             <div class="subcontainer">
-                <div class="about-me-container">
+                <div class="about-me-container">            
                     <span class="title-about-me">About Me</span>
-                    <div class="about-me"></div>
-                </div>
-
+                    <div class="about-me"></div></div>
                 <div class="tech-stack-skills-container">
                     <span class="title-tech-stack">Tech Stack</span>
                     <div class="tech-stack">
-                        <div class="tech-stack-item">
-                            <img src="./assets/python.png" alt="Python">
-                            <span class="tech-name">Python</span>
+                        <div class="tech-stack">
+                            <div class="tech-stack">
+                                <div class="tech-stack-item">
+                                    <img src="./assets/python.png">
+                                    <span class="tech-name">Python</span>
+                                </div>
+                                <div class="tech-stack-item">
+                                    <img src="./assets/c.png">
+                                    <span class="tech-name">C</span>
+                                </div>
+                                <div class="tech-stack-item">
+                                    <img src="./assets/git.png">
+                                    <span class="tech-name">Git</span>
+                                </div>
+                                <div class="tech-stack-item">
+                                    <img src="./assets/bash.png">
+                                    <span class="tech-name">Bash</span>
+                                </div>
+                                <div class="tech-stack-item">
+                                    <img src="./assets/linux.png">
+                                    <span class="tech-name">Linux</span>
+                                </div>
+                                <div class="tech-stack-item">
+                                    <img src="./assets/nix.png">
+                                    <span class="tech-name">Nix</span>
+                                </div>
+                            </div>
+                            
                         </div>
-                        <div class="tech-stack-item">
-                            <img src="./assets/c.png" alt="C">
-                            <span class="tech-name">C</span>
-                        </div>
-                        <div class="tech-stack-item">
-                            <img src="./assets/git.png" alt="Git">
-                            <span class="tech-name">Git</span>
-                        </div>
-                        <div class="tech-stack-item">
-                            <img src="./assets/bash.png" alt="Bash">
-                            <span class="tech-name">Bash</span>
-                        </div>
-                        <div class="tech-stack-item">
-                            <img src="./assets/linux.png" alt="Linux">
-                            <span class="tech-name">Linux</span>
-                        </div>
-                        <div class="tech-stack-item">
-                            <img src="./assets/nix.png" alt="Nix">
-                            <span class="tech-name">Nix</span>
-                        </div>
+                        
                     </div>
-
                     <span class="title-skills">Skills</span>
                     <div class="skills"></div>
                 </div>
             </div>
-
             <div class="projects-container">
                 <span class="title-projects">Projects</span>
                 <div class="projects"></div>
             </div>
         </div>
     </main>
-
     <footer class="footer"></footer>
     <script src="script.js"></script>
 </body>
