--- a/index.html
+++ b/index.html
@@ -23,50 +23,78 @@
     <main>
         <div class="container">
             <div class="subcontainer">
+
                 <div class="about-me-container">            
                     <span class="title-about-me">About Me</span>
-                    <div class="about-me"></div></div>
+                    <div class="about-me">
+                        <p>
+                            "Real Emo" only consists of the dc Emotional Hardcore scene and the late 90's Screamo scene. What is known by "Midwest Emo" is nothing but Alternative Rock with questionable real emo influence. When people try to argue that bands like My Chemical Romance are not real emo, while saying that Sunny Day Real Estate is, I can't help not to cringe because they are just as fake emo as My Chemical Romance (plus the pretentiousness). Real emo sounds ENERGETIC, POWERFUL and somewhat HATEFUL. Fake emo is weak, self pity and a failed attempt to direct energy and emotion into music. Some examples of REAL EMO are Pg 99, Rites of Spring, Cap n Jazz (the only real emo band from the midwest scene) and Loma Prieta. Some examples of FAKE EMO are American Football, My Chemical Romance and Mineral EMO BELONGS TO HARDCORE NOT TO INDIE, POP PUNK, ALT ROCK OR ANY OTHER MAINSTREAM GENRE
+                        </p>
+                    </div>
+                </div>
+
                 <div class="tech-stack-skills-container">
                     <span class="title-tech-stack">Tech Stack</span>
                     <div class="tech-stack">
-                        <div class="tech-stack">
-                            <div class="tech-stack">
-                                <div class="tech-stack-item">
-                                    <img src="./assets/python.png">
-                                    <span class="tech-name">Python</span>
-                                </div>
-                                <div class="tech-stack-item">
-                                    <img src="./assets/c.png">
-                                    <span class="tech-name">C</span>
-                                </div>
-                                <div class="tech-stack-item">
-                                    <img src="./assets/git.png">
-                                    <span class="tech-name">Git</span>
-                                </div>
-                                <div class="tech-stack-item">
-                                    <img src="./assets/bash.png">
-                                    <span class="tech-name">Bash</span>
-                                </div>
-                                <div class="tech-stack-item">
-                                    <img src="./assets/linux.png">
-                                    <span class="tech-name">Linux</span>
-                                </div>
-                                <div class="tech-stack-item">
-                                    <img src="./assets/nix.png">
-                                    <span class="tech-name">Nix</span>
-                                </div>
-                            </div>
-                            
+                        <div class="tech-stack-item">
+                            <img src="./assets/python.png">
+                            <span class="tech-name">Python</span>
                         </div>
+                        <div class="tech-stack-item">
+                            <img src="./assets/c.png">
+                            <span class="tech-name">C</span>
+                        </div>
+                        <div class="tech-stack-item">
+                            <img src="./assets/git.png">
+                            <span class="tech-name">Git</span>
+                        </div>
+                        <div class="tech-stack-item">
+                            <img src="./assets/bash.png">
+                            <span class="tech-name">Bash</span>
+                        </div>
+                        <div class="tech-stack-item">
+                            <img src="./assets/linux.png">
+                            <span class="tech-name">Linux</span>
+                        </div>
+                        <div class="tech-stack-item">
+                            <img src="./assets/nix.png">
+                            <span class="tech-name">Nix</span>
+                        </div>
+                    </div>
+
+                    <span class="title-skills">Skills</span>
+                    <div class="skills">
+                        <ul class="list"; style="list-style-type: none;">
+                            <li>-> Place Holder Text</li>
+                            <li>-> Problem-Solving: Strong analytical skills for tackling complex technical challenges.</li>
+                            <li>-> Version Control: Proficient with Git for collaborative development and project management.</li>
+                            <li>-> Debugging: Efficient in identifying and resolving bugs across different environments.</li>
+                            <li>-> Command-Line Proficiency: Skilled in Bash scripting and navigating Linux-based systems.</li>
+                            <li>-> Adaptability: Quick to learn new technologies and frameworks as project needs evolve.</li>
+                        </ul>
                         
                     </div>
-                    <span class="title-skills">Skills</span>
-                    <div class="skills"></div>
+
                 </div>
             </div>
+            <span class="title-projects">Projects</span>
             <div class="projects-container">
-                <span class="title-projects">Projects</span>
-                <div class="projects"></div>
+                <div class="project-button">
+                    <img src="./assets/linux.png">
+                    <span class="project-name">Project 1</span>
+                </div>
+                <div class="project-button">
+                    <img src="./assets/linux.png">
+                    <span class="project-name">Project 2</span>
+                </div>
+                <div class="project-button">
+                    <img src="./assets/linux.png">
+                    <span class="project-name">Project 3</span>
+                </div>
+                <div class="project-button">
+                    <img src="./assets/linux.png">
+                    <span class="project-name">Project 4</span>
+                </div>
             </div>
         </div>
     </main>
