--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="top-bar">
         <div class="links">
-            <a href="https://github.com/aem2231">[GitHub]</a>
+            <a href="https://github.com/aem2231">[github]</a>
+            <a href="https://leetcode.com/u/aem2231/">[leetcode]</a>
         </div>
     </div>
     <header class="site-header">
@@ -25,16 +26,25 @@
             <div class="subcontainer">
 
                 <div class="about-me-container">            
-                    <span class="title-about-me">About Me</span>
+                    <span id="title-about-me">About Me</span>
                     <div id="about-me">
-                        <p>
-                            "Real Emo" only consists of the dc Emotional Hardcore scene and the late 90's Screamo scene. What is known by "Midwest Emo" is nothing but Alternative Rock with questionable real emo influence. When people try to argue that bands like My Chemical Romance are not real emo, while saying that Sunny Day Real Estate is, I can't help not to cringe because they are just as fake emo as My Chemical Romance (plus the pretentiousness). Real emo sounds ENERGETIC, POWERFUL and somewhat HATEFUL. Fake emo is weak, self pity and a failed attempt to direct energy and emotion into music. Some examples of REAL EMO are Pg 99, Rites of Spring, Cap n Jazz (the only real emo band from the midwest scene) and Loma Prieta. Some examples of FAKE EMO are American Football, My Chemical Romance and Mineral EMO BELONGS TO HARDCORE NOT TO INDIE, POP PUNK, ALT ROCK OR ANY OTHER MAINSTREAM GENRE
+                        <p id="about-me-text">
+                            Hi, I'm Mario, a passionate programmer with a strong foundation in Python, C and Linux Systems. My programming journery began when I was 13 and started to learn Python. Since then, I've become overwhelmingly enthusiastic about programming and Computer Science as a whole.
+                        </p> 
+                        <p id="about-me-text">
+                            I take a strong interest in the lower-level side of comuter science, such as CPU Architecture, Emulators and Kernels. Ideally, I would like to work in a position that is heavily involved in these. I also have a strong interest in Linux and advocate for open-source software.
+                        </p>
+                        <p id="about-me-text">
+                            Currently, I'm planning to work on a chip-8 emulator as my first emudev project. Sooner or later, I'll and a devlogs page to this portfolio and discuss projects im working on over there. 
+                        </p>
+                        <p id="about-me-text">
+                            Apart from programming, I love to listen to music, skate and play Doom or THPS2 on my GameBoy Advance Sp. Perhaps I'll make a game for it some day.
                         </p>
                     </div>
                 </div>
 
                 <div class="tech-stack-skills-container">
-                    <span class="title-tech-stack">Tech Stack</span>
+                    <span id="title-tech-stack">Tech Stack</span>
                     <div class="tech-stack">
                         <div class="tech-stack-item">
                             <img src="./assets/python.png">
@@ -62,38 +72,24 @@
                         </div>
                     </div>
 
-                    <span class="title-skills">Skills</span>
+                    <span id="title-skills">Skills</span>
                     <div class="skills">
                         <ul class="list"; style="list-style-type: none;"; id="skills-list">
-                            <li>-> Place Holder Text</li>
-                            <li>-> Problem-Solving: Strong analytical skills for tackling complex technical challenges.</li>
-                            <li>-> Version Control: Proficient with Git for collaborative development and project management.</li>
-                            <li>-> Debugging: Efficient in identifying and resolving bugs across different environments.</li>
-                            <li>-> Command-Line Proficiency: Skilled in Bash scripting and navigating Linux-based systems.</li>
-                            <li>-> Adaptability: Quick to learn new technologies and frameworks as project needs evolve.</li>
-                        </ul>
-                        
+                            <li>-> Strong problem solving skills</li>
+                            <li>-> Competent communicator when working in groups</li>
+                            <li>-> Proficient in version control using Git</li>
+                            <li>-> Three years of exeperience with Linux and the command line</li>
+                            <li>-> Quick to learn and adapt technologies that are new to me</li>
+                        </ul> 
                     </div>
 
                 </div>
             </div>
-            <span class="title-projects">Projects</span>
+            <span id="title-projects">Projects</span>
             <div class="projects-container">
-                <div class="project-button">
+                <div class="project-button" id="smallfetch-button">
                     <img src="./assets/linux.png">
-                    <span class="project-name">Project 1</span>
-                </div>
-                <div class="project-button">
-                    <img src="./assets/linux.png">
-                    <span class="project-name">Project 2</span>
-                </div>
-                <div class="project-button">
-                    <img src="./assets/linux.png">
-                    <span class="project-name">Project 3</span>
-                </div>
-                <div class="project-button">
-                    <img src="./assets/linux.png">
-                    <span class="project-name">Project 4</span>
+                    <span class="project-name">smallfetch</span>
                 </div>
             </div>
         </div>
