added contact button

--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 <body>
     <div class="top-bar">
         <div class="links">
+            <span id="contact-button">[contact me]</span>
             <a href="https://github.com/aem2231">[github]</a>
             <a href="https://leetcode.com/u/aem2231/">[leetcode]</a>
+        </div>
+    </div>
+    <div id="contact-popup" class="popup">
+        <div class="popup-content">
+            <span id="close-contact-popup" class="close-btn">[close]</span>
+            <h2 id="contact-title">Contact Me</h2>
+            <a id="mailto-link" class="contact-detail" href="mailto:mariojetullaji@gmail.com">[email] mariojetullaji@gmail.com<br></a>
+            <span class="contact-detail">[phone] 07743696701<br></span>
         </div>
     </div>
     <header class="site-header">
@@ -38,7 +47,7 @@
                             Currently, I'm planning to work on a chip-8 emulator as my first emudev project. Sooner or later, I'll and a devlogs page to this portfolio and discuss projects im working on over there. 
                         </p>
                         <p id="about-me-text">
-                            Apart from programming, I love to listen to music, skate and play Doom or THPS2 on my GameBoy Advance Sp. Perhaps I'll make a game for it some day.
+                            Apart from programming, I love to listen to music, skate and play Doom or THPS2 on my GameBoy Advance SP. Perhaps I'll make a game for it some day.
                         </p>
                     </div>
                 </div>
