--- a/index.html
+++ b/index.html
@@ -17,11 +17,49 @@
     <div id="contact-popup" class="popup">
         <div class="popup-content">
             <span id="close-contact-popup" class="close-btn">[close]</span>
-            <h2 id="contact-title">Contact Me</h2>
+            <h2 class="popup-title">Contact Me</h2>
             <a id="mailto-link" class="contact-detail" href="mailto:mariojetullaji@gmail.com">[email] mariojetullaji@gmail.com<br></a>
             <span class="contact-detail">[phone] 07743696701<br></span>
         </div>
     </div>
+
+    <div id="smallfetch-popup" class="popup">
+        <div class="popup-content">
+            <span id="close-project-popup" class="close-btn">[close]</span>
+            <h2 id="smallfetch-title" class="popup-title">smallfetch</h2>
+            <div id="smallfetch-container">
+
+                <div id="desc-techstack-container">
+                    <p class="project-desc">Smallfetch is a simple 'fetch' command for linux, similar to neofetch, that fetches system
+                        information and displays it in a viusally appealing way.
+                    </p>
+                    
+                    <div id="tech-stack-used">
+                        <span class="popup-subtitle">Technologies Used</span>
+                        <div class="tech-stack">
+                            <div class="tech-stack-item">
+                                <img src="./assets/c.png">
+                                <span class="tech-name">C</span>
+                            </div>
+                            <div class="tech-stack-item">
+                                <img src="./assets/bash.png">
+                                <span class="tech-name">Bash</span>
+                            </div>
+                            
+                            <div class="tech-stack-item">
+                                <img src="./assets/linux.png">
+                                <span class="tech-name">Linux</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <span class="popup-subtitle">Screenshot</span>
+                <img src="./assets/smallfetch.png">
+            </div>
+        </div>
+    </div>
+
     <header class="site-header">
         <h1 class="title">
             Hi, I'm Mario.
@@ -38,16 +76,21 @@
                     <span id="title-about-me">About Me</span>
                     <div id="about-me">
                         <p id="about-me-text">
-                            Hi, I'm Mario, a passionate programmer with a strong foundation in Python, C and Linux Systems. My programming journery began when I was 13 and started to learn Python. Since then, I've become overwhelmingly enthusiastic about programming and Computer Science as a whole.
+                            Hi, I'm Mario, a passionate programmer with a strong foundation in Python, C and Linux Systems. 
+                            My programming journery began when I was 13 and started to learn Python throughout lockdown. 
+                            Since then, I've become overwhelmingly enthusiastic about programming and Computer Science as a whole.
                         </p> 
                         <p id="about-me-text">
-                            I take a strong interest in the lower-level side of comuter science, such as CPU Architecture, Emulators and Kernels. Ideally, I would like to work in a position that is heavily involved in these. I also have a strong interest in Linux and advocate for open-source software.
+                            I take a strong interest in the lower-level side of computer science, such as CPU Architecture, Emulators and Kernels 
+                            and ideally, I would like to work in a position that is heavily involved in these. 
+                            I also have a strong interest in Linux and advocate for open-source software.
                         </p>
                         <p id="about-me-text">
-                            Currently, I'm planning to work on a chip-8 emulator as my first emudev project. Sooner or later, I'll and a devlogs page to this portfolio and discuss projects im working on over there. 
+                            Currently, I'm planning to work on a chip-8 emulator as my first emudev project. 
+                            Sooner or later, I might add a devlogs page to this portfolio and discuss projects I'm working on over there. 
                         </p>
                         <p id="about-me-text">
-                            Apart from programming, I love to listen to music, skate and play Doom or THPS2 on my GameBoy Advance SP. Perhaps I'll make a game for it some day.
+                            Apart from programming, I love to listen to music, skate and play Doom or THPS2 on my GameBoy Advance SP. 
                         </p>
                     </div>
                 </div>
@@ -87,8 +130,8 @@
                             <li>-> Strong problem solving skills</li>
                             <li>-> Competent communicator when working in groups</li>
                             <li>-> Proficient in version control using Git</li>
-                            <li>-> Three years of exeperience with Linux and the command line</li>
-                            <li>-> Quick to learn and adapt technologies that are new to me</li>
+                            <li>-> Three years of experience with Linux and the command line</li>
+                            <li>-> Quick to learn and adapt to technologies that are new to me</li>
                         </ul> 
                     </div>
 
