updated about me

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             I also have a strong interest in Linux and advocate for open-source software.
                         </p>
                         <p id="about-me-text">
-                            Currently, I'm planning to work on a chip-8 emulator as my first emudev project. 
+                            Currently, I'm working on a chip-8 emulator as my first emudev project. 
                             Sooner or later, I might add a devlogs page to this portfolio and discuss projects I'm working on over there. 
                         </p>
                         <p id="about-me-text">
