--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="top-bar">
@@ -147,6 +147,6 @@
         </div>
     </main>
     <footer class="footer"></footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
