removed hover effect form tech stack to avoid confusion

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="popup-content">
             <span id="close-project-popup" class="close-btn">[close]</span>
             <h2 id="smallfetch-title" class="popup-title">smallfetch</h2>
+            <h2 id="smallfetch-gitrepo" class="popup-gitrepo-link">[git repo]</h2>
             <div id="smallfetch-container">
 
                 <div id="desc-techstack-container">
@@ -104,7 +105,7 @@
                         </div>
                         <div class="tech-stack-item">
                             <img src="./assets/c.png">
-                            <span class="tech-name">C</span>
+                            <span class="tech-name">C/C++</span>
                         </div>
                         <div class="tech-stack-item">
                             <img src="./assets/git.png">
@@ -112,7 +113,7 @@
                         </div>
                         <div class="tech-stack-item">
                             <img src="./assets/bash.png">
-                            <span class="tech-name">Bash</span>
+                            <span class="tech-name">bash</span>
                         </div>
                         <div class="tech-stack-item">
                             <img src="./assets/linux.png">
