--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 
     <div id="smallfetch-popup" class="popup">
         <div class="popup-content">
-            <span id="close-project-popup" class="close-btn">[close]</span>
+            <div id="popup-top-bar">
+                <span id="close-project-popup" class="close-btn">[close]</span>
+                <span id="smallfetch-gitrepo" class="popup-gitrepo-link">[git repo]</span>
+            </div>
             <h2 id="smallfetch-title" class="popup-title">smallfetch</h2>
-            <h2 id="smallfetch-gitrepo" class="popup-gitrepo-link">[git repo]</h2>
             <div id="smallfetch-container">
 
                 <div id="desc-techstack-container">
