updated description and chnaged selection colour

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                             I also have a strong interest in Linux and advocate for open-source software.
                         </p>
                         <p id="about-me-text">
-                            Currently, I'm working on a chip-8 emulator as my first emudev project. 
-                            Sooner or later, I might add a devlogs page to this portfolio and discuss projects I'm working on over there. 
+                            Currently, I'm learning the <a href="https://gbadev.net/tonc/">tonc library</a> so that I can make a game for the GameBoy Advance. 
+                            Sooner or later, I'll add a devlogs section to this page and post, well, devlogs there and document any research related to projects I'm working on.
                         </p>
                         <p id="about-me-text">
                             Apart from programming, I love to listen to music, skate and play Doom or THPS2 on my GameBoy Advance SP. 
