--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="popup-content">
             <span id="close-contact-popup" class="close-btn">[close]</span>
             <h2 class="popup-title">Contact Me</h2>
-            <a id="mailto-link" class="contact-detail" href="mailto:mariojetullaji@gmail.com">[email] mariojetullaji@gmail.com<br></a>
+            <a id="mailto-link" class="contact-detail" href="mailto:eris.jetullaji@protonmail.com">[email] eris.jetullaji@protonmail.com<br></a>
             <span class="contact-detail">[phone] 07743696701<br></span>
         </div>
     </div>
@@ -36,7 +36,7 @@
                 <p class="project-desc">Smallfetch is a simple 'fetch' command for linux, similar to neofetch, that fetches system
                         information and displays it in a viusally appealing way.
                 </p>
-                    
+
                 <div id="tech-stack-used">
                     <span class="popup-subtitle">Technologies Used</span>
                     <div class="tech-stack">
@@ -48,7 +48,7 @@
                             <img src="./assets/bash.png">
                             <span class="tech-name">Bash</span>
                         </div>
-                            
+
                         <div class="tech-stack-item">
                             <img src="./assets/linux.png">
                             <span class="tech-name">Linux</span>
@@ -63,35 +63,35 @@
 
     <header class="site-header">
         <h1 class="title">
-            Hi, I'm Mario.
+            Hi, I'm Eris.
         </h1>
         <h2 class="subtitle">
-            [scroll down]                
+            [scroll down]
         </h2>
     </header>
     <main>
         <div class="container">
             <div class="subcontainer">
 
-                <div class="about-me-container">            
+                <div class="about-me-container">
                     <span id="title-about-me">About Me</span>
                     <div id="about-me">
                         <p id="about-me-text">
-                            Hi, I'm Mario, a passionate programmer with a strong foundation in Python, C and Linux Systems. 
-                            My programming journery began when I was 13 and started to learn Python throughout lockdown. 
+                            Hi, I'm Eris, a passionate programmer with a strong foundation in Python, C and Linux Systems.
+                            My programming journery began when I was 13 and started to learn Python throughout lockdown.
                             Since then, I've become overwhelmingly enthusiastic about programming and Computer Science as a whole.
-                        </p> 
+                        </p>
                         <p id="about-me-text">
-                            I take a strong interest in the lower-level side of computer science, such as CPU Architecture, Emulators and Kernels 
-                            and ideally, I would like to work in a position that is heavily involved in these. 
+                            I take a strong interest in the lower-level side of computer science, such as CPU Architecture, Emulators and Kernels
+                            and ideally, I would like to work in a position that is heavily involved in these.
                             I also have a strong interest in Linux and advocate for open-source software.
                         </p>
                         <p id="about-me-text">
-                            Currently, I'm learning the <a href="https://gbadev.net/tonc/">tonc library</a> so that I can make a game for the GameBoy Advance. 
+                            Currently, I'm learning the <a href="https://gbadev.net/tonc/">tonc library</a> so that I can make a game for the GameBoy Advance.
                             Sooner or later, I'll add a devlogs section to this page and post, well, devlogs there and document any research related to projects I'm working on.
                         </p>
                         <p id="about-me-text">
-                            Apart from programming, I love to listen to music, skate and play Doom or THPS2 on my GameBoy Advance SP. 
+                            Apart from programming, I love to listen to music, skate and play Doom or THPS2 on my GameBoy Advance SP.
                         </p>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                             <li>-> Proficient in version control using Git</li>
                             <li>-> Three years of experience with Linux and the command line</li>
                             <li>-> Quick to learn and adapt to technologies that are new to me</li>
-                        </ul> 
+                        </ul>
                     </div>
 
                 </div>
