--- a/index.html
+++ b/index.html
@@ -70,33 +70,24 @@
       <div class="popup-content">
         <div id="popup-top-bar">
           <span id="close-project-popup" class="close-btn">[close]</span>
-          <span id="p2p-chat-gitrepo" class="popup-gitrepo-link"
-            >[git repo]</span
-          >
+          <span id="p2p-chat-gitrepo" class="popup-gitrepo-link">[git repo]</span>
         </div>
         <h2 id="p2p-chat-title" class="popup-title">p2p-chat</h2>
         <div id="p2p-chat-container">
           <p class="project-desc">
-            Smallfetch is a simple 'fetch' command for linux, similar to
-            neofetch, that fetches system information and displays it in a
-            viusally appealing way.
+            placeholder
           </p>
 
           <div id="tech-stack-used">
             <span class="popup-subtitle">Technologies Used</span>
             <div class="tech-stack">
               <div class="tech-stack-item">
-                <img src="./assets/c.png" />
-                <span class="tech-name">C</span>
+                <img src="./assets/cpp.png" />
+                <span class="tech-name">C++</span>
               </div>
               <div class="tech-stack-item">
-                <img src="./assets/bash.png" />
-                <span class="tech-name">Bash</span>
-              </div>
-
-              <div class="tech-stack-item">
-                <img src="./assets/linux.png" />
-                <span class="tech-name">Linux</span>
+                <img src="./assets/boost.png" />
+                <span class="tech-name">Boost.Asio</span>
               </div>
             </div>
           </div>
@@ -115,7 +106,7 @@
             <span id="title-about-me">About Me</span>
             <div id="about-me">
               <p id="about-me-text">
-                I like programming anf mcr and shiabri :tada:
+                placeholder
               </p>
               <p id="about-me-text"></p>
               <p id="about-me-text"></p>
@@ -163,12 +154,8 @@
                 <li>-> Strong problem solving skills</li>
                 <li>-> Competent communicator when working in groups</li>
                 <li>-> Proficient in version control using Git</li>
-                <li>
-                  -> Three years of experience with Linux and the command line
-                </li>
-                <li>
-                  -> Quick to learn and adapt to technologies that are new to me
-                </li>
+                <li> -> Three years of experience with Linux and the command line</li>
+                <li> -> Quick to learn and adapt to technologies that are new to me</li>
               </ul>
             </div>
           </div>
@@ -178,6 +165,11 @@
           <div class="project-button" id="smallfetch-button">
             <img src="./assets/linux.png" />
             <span class="project-name">smallfetch</span>
+          </div>
+
+          <div class="project-button" id="p2p-chat-button">
+            <img src="./assets/text.png" />
+            <span class="project-name">p2p-chat</span>
           </div>
         </div>
       </div>
