--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="smallfetch-popup" class="popup">
       <div class="popup-content">
         <div id="popup-top-bar">
-          <span id="close-project-popup" class="close-btn">[close]</span>
+          <span class="close-btn close-project-popup">[close]</span>
           <span id="smallfetch-gitrepo" class="popup-gitrepo-link"
             >[git repo]</span
           >
@@ -69,7 +69,7 @@
     <div id="p2p-chat-popup" class="popup">
       <div class="popup-content">
         <div id="popup-top-bar">
-          <span id="close-project-popup" class="close-btn">[close]</span>
+          <span class="close-btn close-project-popup">[close]</span>
           <span id="p2p-chat-gitrepo" class="popup-gitrepo-link">[git repo]</span>
         </div>
         <h2 id="p2p-chat-title" class="popup-title">p2p-chat</h2>
