added desc for p2p chat app

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <h2 id="p2p-chat-title" class="popup-title">p2p-chat</h2>
         <div id="p2p-chat-container">
           <p class="project-desc">
-            placeholder
+            A simple, terminal based Peer-to-Peer Chat app written in C++ using the Boost.Asio library that allows for messages to be sent between peers over a local network.
+            Utilises UDP flooding and sniffing over UDP port 9001 to discover peers. Messages are sent over TCP port 9000.
           </p>
 
           <div id="tech-stack-used">
