--- a/index.html
+++ b/index.html
@@ -107,9 +107,14 @@
             <span id="title-about-me">About Me</span>
             <div id="about-me">
               <p id="about-me-text">
-                placeholder
+                Hi I'm Eris! I like to code in C and C++ and love Linux. I take a strong interest in systems-level and embedded programming,
+                and love working with developement boards such as Arduinos. I also try to program Arduinos with the avrdude library,
+                and get as bare metal as I can by directly writing to registers to interact with it instead of using pre-made functions
+                provided by the arduino library.
               </p>
-              <p id="about-me-text"></p>
+              <p id="about-me-text">
+                Outside of programming, I enjoy listening listening to music and thinking critically about the meaning or story behind the albumns I listen to.
+                I also love going to local gigs and have been a huge advocate for supporting local bands and grassroots venues. </p>
               <p id="about-me-text"></p>
             </div>
           </div>
@@ -131,7 +136,7 @@
               </div>
               <div class="tech-stack-item">
                 <img src="./assets/bash.png" />
-                <span class="tech-name">bash</span>
+                <span class="tech-name">Bash</span>
               </div>
               <div class="tech-stack-item">
                 <img src="./assets/linux.png" />
